unit tests are currently not working on the mac so the branch is on hold for now